--- a/view/articlesPage.html
+++ b/view/articlesPage.html
@@ -37,7 +37,7 @@
         </a>
         {{end}}      
         <div class="text-center mt-5">
-            <a class="fs18 clr2 text-decoration-none" href="/articles?page={{.page}}">See More...</a>
+            <a class="fs18 clr2 text-decoration-none" href="/articles?page={{.page}}">More...</a>
         </div>        
     
         {{template "footer.html" .}}
