--- a/view/daoDetail.html
+++ b/view/daoDetail.html
@@ -83,7 +83,7 @@
                         <dl>
                             <dd class="p-2">
                                 <span class="fw-bold">Category</span>
-                                <span class="detail-ov-cnt">Social, Web3</span>
+                                <span class="detail-ov-cnt">{{.view.Tag}}</span>
                             </dd>
                             <dd class="p-2">
                                 <span class="fw-bold">Members</span>
