--- a/view/index.html
+++ b/view/index.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="col-md-3 pd-0 al-rt nh-t-more">
                         <a href="/articles" class="clr2-1">
-                            <span>Read More</span>
+                            <span>More</span>
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
@@ -71,7 +71,7 @@
                     </div>
                     <div class="col-md-9 pd-0 al-rt nh-t-more">
                         <a href="/articles" class="clr2-1">
-                            <span>Read More</span>
+                            <span>More</span>
                             <i class="bi bi-arrow-right"></i>
                         </a>
                     </div>
@@ -123,9 +123,9 @@
                             </div>
                             <div class="title clr2 fs24 fs600">{{$v.Title}}</div>
                             <p class="fs16 clr2 mgtp-1">
-                                <span>{{$v.Members}}</span>
-                                <span class="divider divider-vertical"></span>
-                                <span>Investment</span>
+                                <span>{{$v.Members}} Members</span>
+                                <!-- <span class="divider divider-vertical"></span>
+                                <span>Investment</span> -->
                             </p>
                         </div>
                         <p class="px-4 p-cnt fs18 clr2-1">{{$v.Summary}}</p>
@@ -138,7 +138,7 @@
             </div>
         </div>
         <div class="text-center mt-3">
-            <a class="fs18 clr2 text-decoration-none" href="/daosPage">See More...</a>
+            <a class="fs18 clr2 text-decoration-none" href="/daosPage">More...</a>
         </div>
     </div>
     {{template "footer.html" .}}
