--- a/view/index.html
+++ b/view/index.html
@@ -130,7 +130,7 @@
                         </div>
                         <p class="px-4 p-cnt fs18 clr2-1">{{$v.Summary}}</p>
                         <div class="d-flex justify-content-center more-btn">
-                            <a href="/view/{{$v.ID}}" class="read-more fs18 bg-more text-decoration-none">See More</a>
+                            <a href="/view/{{$v.ID}}" class="read-more fs18 bg-more text-decoration-none">More</a>
                         </div>
                     </div>
                 </div>
