--- a/view/daoDetail.html
+++ b/view/daoDetail.html
@@ -43,11 +43,6 @@
                         </a>
                     </div>
                 </div>
-                <!-- <div class="col-md-3 fx-al-ct mgtp-40 text-center">
-                    <a href="#" class="dao-btn dao-btn-primary text-decoration-none rounded-pill">
-                        <span><img src="/static/imgs/icon_share.png" alt=""></span>
-                        <span>SHARE THIS DAO</span></a>
-                </div> -->
             </div>
 
             <ul class="nav">
@@ -83,7 +78,7 @@
                         <dl>
                             <dd class="p-2">
                                 <span class="fw-bold">Category</span>
-                                <span class="detail-ov-cnt">{{.view.Tag}}</span>
+                                <span class="detail-ov-cnt">{{ toDaoTag .view.Tag}}</span>
                             </dd>
                             <dd class="p-2">
                                 <span class="fw-bold">Members</span>
