--- a/view/daoDetail.html
+++ b/view/daoDetail.html
@@ -123,6 +123,22 @@
 
             <div class="h-line line-bm mg-x48"></div>
 
+            <div id="Goal" class="">
+                <div class="fs28 fs600 clr3 mgbm-24">
+                    <i class="bi-receipt color-primary"></i>
+                    <span class="px-2">Goal</span>
+                </div>
+                <div>
+                    <div class="goal-cnt">
+                        <div class="fs22 fs600 clr2">
+                            <!-- <i class="bi-bullseye color-primary"></i> -->
+                            <!-- <span class="">Goal</span> -->
+                        </div>
+                        <div>{{.daoAttr.Summary}}</div>
+                    </div>
+                </div>
+            </div>
+            <div class="h-line line-bm mg-x48"></div>
             <div id="Introduction" class="">
                 <div class="fs28 fs600 clr3 mgbm-24">
                     <i class="bi-receipt color-primary"></i>
@@ -132,32 +148,15 @@
                     <div class="goal-cnt">
                         <div class="fs22 fs600 clr2">
                             <!-- <i class="bi-bullseye color-primary"></i> -->
-                            <span class="">Goal</span>
+                            <!-- <span class="">Goal</span> -->
                         </div>
-                        <div>{{.daoAttr.Summary}}</div>
+                        <!-- <div>{{.daoAttr.Summary}}</div> -->
                     </div>
 
                     <div>
                         {{.body}}
                     </div>
                 </div>
-                
-                <!-- <h4>Mission</h4>
-                <p>Developer DAO exists to accelerate the education and impact of a new wave of web3 builders</p>
-                <h4>Value</h4>
-                <ul>
-                    <li>Transparency (open source everything, conversations in public, document and share journey)</li>
-                    <li>Diversity and Inclusion (seek to foster as diverse a membership as possible and support everyone to contribute)</li>
-                    <li>Responsibility (as a self-governed community we rely on members to be personally responsible for their actions
-                        and commitments to the community)</li>
-                </ul>
-                <h4>Goal</h4>
-                <ul>
-                    <li>Transparency (open source everything, conversations in public, document and share journey)</li>
-                    <li>Diversity and Inclusion (seek to foster as diverse a membership as possible and support everyone to contribute)</li>
-                    <li>Responsibility (as a self-governed community we rely on members to be personally responsible for their actions
-                        and commitments to the community)</li>
-                </ul> -->
             </div>
 
             <div class="h-line line-bm mg-x48"></div>
