--- a/view/articlesPage.html
+++ b/view/articlesPage.html
@@ -25,7 +25,7 @@
                 <div class="col-md-8 pos-re">
                     <div class="fs28 fs600 clr2 mb-3">{{$v.Title}}</div>
                     <p class="fs16 clr2-1 art-p-cnt overflow-hidden">{{$v.Content}}</p>
-                    <div class="fs16 clr2-2 pos-ab">Otc 3 · 3 min read</div>  
+                    <div class="fs16 clr2-2 pos-ab art-dtime">Otc 3 · 3 min read</div>  
                 </div>
                 <div class="col-md-4 al-rt">
                     <div class="article-cover">
