--- a/view/daoDetail.html
+++ b/view/daoDetail.html
@@ -19,9 +19,9 @@
         {{template "nav.html" .}}
     </div>
     <div class="container page">
-        <nav>DAOs / {{.view.Title}} <nav>
+        <nav class="nav-m">DAOs / {{.view.Title}} <nav>
         
-        <div class="bg-white rounded-3 shadow-sm pd-bm-0 pdlt-5 pdrt-1 py-4 mgtp-80">
+        <div class="bg-white rounded-3 shadow-sm pd-bm-0 pdlt-5 pdrt-1 py-4 mgtp-80 dao-detail-head-m">
             <div class="row dao-head">
                 <div class="col-md-2 pd-0 text-center">
                     <div class="head-img"><img class="img-fluid" src="{{.view.Pic}}" alt=""></div>
@@ -67,7 +67,7 @@
             </ul>
         </div>
 
-        <div class="bg-white rounded-3 shadow-sm px-5 py-5 mt-4">
+        <div class="bg-white rounded-3 shadow-sm px-5 py-5 mt-4 dao-detail-cnt-m">
             <div id="Overview" class="">
                 <div class="fs28 fs600 clr3">
                     <i class="bi-bookmark color-primary"></i>
