--- a/view/footer.html
+++ b/view/footer.html
@@ -2,7 +2,10 @@
 <div class="footer">
     <!-- <h3 class="text-center mb-4">Join the community</h3> -->
     <div class="container text-center fs-1">
-        <a class="px-3" target="_blank" href="https://mirror.xyz/daoatlas.eth" title="mirror"><img src="/static/mirror.png" style="width: 40px;height: 40px;margin-top: -12px;"></a>
+        <a class="px-3" target="_blank" href="https://mirror.xyz/daoatlas.eth" title="mirror">
+            <!-- <img src="/static/mirror.png" style="width: 40px;height: 40px;margin-top: -12px;"> -->
+            <span class="mirror-bg"></span>
+        </a>
         <a class="px-3" target="_blank" href="https://discord.com/invite/77csYrG5ny" title="discord"><i class="bi bi-discord"></i></a>
         <a class="px-3" target="_blank" href="https://daoatlas.medium.com/" title="medium"><i class="bi bi-medium"></i></a>
         <a class="px-3" target="_blank" href="https://twitter.com/DAOAtlas" title="twitter"><i class="bi bi-twitter"></i></a>
