--- a/static/css/front/style.css
+++ b/static/css/front/style.css
@@ -251,10 +251,26 @@
 
 .footer a{
     color: #303B67;
+    text-decoration: none;
     transition: color .5s;
 }
 .footer a:hover{
     color: #0d6efd;
+}
+.mirror-bg{
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    vertical-align: middle;
+    margin-top: -8px;
+    background-image: url('/static/mirror.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    /*transition: background-position .5s;*/
+}
+.mirror-bg:hover{
+    background-position: 0 -40px;
 }
 
 .dao-head{
