--- a/view/articlesDetail.html
+++ b/view/articlesDetail.html
@@ -26,19 +26,20 @@
                 {{.body}}
             </div>
         </div>
-        <h3 class="text-center mb-4 mt-5"></h3>
+        <!-- <h3 class="text-center mb-4 mt-5"></h3>
         <div class="container text-center fs-1">
             <a class="px-3" href=""><i class="bi bi-twitter"></i></a>
             <a class="px-3" href=""><i class="bi bi-discord"></i></a>
             <a class="px-3" href=""><i class="bi bi-medium"></i></a>
             <a class="px-3" href=""><i class="bi bi-github"></i></a>
-        </div>
+        </div> -->
         <!-- <div class="container copy border-top mt-5 pt-3 d-flex  justify-content-between">
             <div class="text-muted f12 ">&copy2021 DAOAtlas </div>
             <div class="text-muted f12 ">Powered by DAOAtlas Genesis</div>
         </div> -->
-        <div id="copy_right"><copy-right /></div>
+        <!-- <div id="copy_right"><copy-right /></div> -->
     </div>
+    {{template "footer.html" .}}
 </body>
 <script type="text/javascript">
     new Vue({ el: "#copy_right" });
