--- a/view/daoDetail.html
+++ b/view/daoDetail.html
@@ -245,8 +245,9 @@
             <div class="text-muted f12 ">&copy2021 DAOAtlas </div>
             <div class="text-muted f12 ">Powered by DAOAtlas Genesis</div>
         </div> -->
-        <div id="copy_right"><copy-right /></div>
+        <!-- <div id="copy_right"><copy-right /></div> -->
     </div>
+    {{template "footer.html" .}}
 </body>
 <script type="text/javascript">
     new Vue({ el: "#copy_right" });
