--- a/view/articlesDetail.html
+++ b/view/articlesDetail.html
@@ -14,8 +14,8 @@
     <script src="/static/component/copyright.js"></script>
 </head>
 
-<body class="bg">
-    <div class="container-fluid header">
+<body class="">
+    <div class="top-nav">
         {{template "nav.html" .}}
     </div>
     <div class="container page">
