--- a/view/about.html
+++ b/view/about.html
@@ -4,19 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/static/favicon.ico" type="image/x-icon" />
     <title>{{.base.Tdk.Title}}-DAOAtlas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <link href="/static/css/front/style.css" rel="stylesheet">
+    <link href="/static/css/common.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </head>
 
-<body class="bg">
-    <div class="container-fluid header">
+<body class="">
+    <div class="top-nav">
         {{template "nav.html" .}}
     </div>
     <div class="container page">
-        <div class="p-5 bg-white rounded-3 shadow-sm mt-4 lh-lg">
+        <div class="p-5 bg-white rounded-3 shadow-sm mt-4 lh-lg about-m">
             <h3>{{.view.Title}}</h3>
             <div>
                 {{.body}}
