fixed：详情页背景_202201251525

--- a/view/about.html
+++ b/view/about.html
@@ -13,8 +13,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 </head>
 
-<body class="">
-    <div class="top-nav">
+<body class="bg">
+    <div class="top-nav header">
         {{template "nav.html" .}}
     </div>
     <div class="container page">
